--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bernardo Marques | WDD 130</title>
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <header>
-      <a href="#">Home</a>
-      <a href="wwr/">Rafting Website</a>
-      <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+      <nav>
+        <a href="#">Home</a>
+        <a href="wwr/">Rafting Website</a>
+        <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+      </nav>
     </header>
     <main>
       <h1>Bernardo Marques | WDD 130</h1>
