week 2 - enhancing your course home page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bernardo Marques | WDD 130</title>
+    <meta
+      name="description"
+      content="Bernardo Marques's WDD 130 page used to showcase his learnings."
+    />
+    <meta name="author" content="Bernardo Marques" />
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
@@ -23,6 +28,17 @@
         free time playing videogames.
       </p>
     </main>
+    <aside>
+      <h2>Rio Grande do Sul</h2>
+      <img src="images/rio-grande-do-sul.jpg" alt="Rio Grande do Sul" />
+      <p>
+        Rio Grande do Sul is a state in the southern region of Brazil. Located
+        in the southernmost part of the country, Rio Grande do Sul is bordered
+        clockwise by Santa Catarina to the north and northeast, the Atlantic
+        Ocean to the east, Uruguay to the south and southwest, and Argentina to
+        the west and northwest.
+      </p>
+    </aside>
     <footer>
       <p>&copy;2023 | Bernardo Marques | Rio Grande do Sul, Brazil</p>
     </footer>
