add meta and fix missing h4

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Rafting Site project" />
+    <meta name="author" content="Bernardo Marques" />
     <title>Rafting Site Plan | Bernardo Marques</title>
     <link rel="stylesheet" href="styles/site-plan-rafting.css" />
   </head>
@@ -60,10 +62,10 @@
       </p>
       <h3>Typography</h3>
       <h4>Heading Example Font</h4>
-      <p>Normal Text/Paragraph Example Font</p>
-      <p></p>
-      <h4 class="colored-callout">Colored Callout Example Font</h4>
-      <p></p>
+      <h4>Normal Text/Paragraph Example Font</h4>
+      <p>Example text</p>
+      <h4>Colored Callout Example Font</h4>
+      <p class="colored-callout">Example text</p>
       <h3>Navigation</h3>
       <nav>
         <a href="#">Home</a>
