w3 - enhancing the page

--- a/index.html
+++ b/index.html
@@ -17,18 +17,24 @@
         <a href="#">Home</a>
         <a href="wwr/">Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+        <a href="https://www.linkedin.com/in/bermarques/">LinkedIn</a>
+        <a href="https://www.facebook.com/bernardohmarques/">Facebook</a>
       </nav>
     </header>
     <main>
       <h1>Bernardo Marques | WDD 130</h1>
       <img src="images/profile.jpg" alt="Bernardo Marques" width="200" />
       <p>
-        Hello! My name is Bernardo and I am from Rio Grande do Sul, Brazil. I
-        love practicing sports and learning new things, and like to spend my
-        free time playing videogames.
+        Hello! My name is Bernardo and the third of four children and served as
+        a missionary in Fortaleza East mission. I'm looking to upgrade my skills
+        and currently work as a front end developer in a company called
+        Controlle. I am from Rio Grande do Sul, Brazil and I love practicing
+        sports and learning new things, and like to spend my free time playing
+        videogames. My current hobbies are playing soccer once a week and
+        training boxing a few times a week.
       </p>
     </main>
-    <aside>
+    <aside class="box">
       <h2>Rio Grande do Sul</h2>
       <img src="images/rio-grande-do-sul.jpg" alt="Rio Grande do Sul" />
       <p>
@@ -39,8 +45,29 @@
         the west and northwest.
       </p>
     </aside>
+    <ul class="box">
+      <li>
+        <a
+          href="https://www.churchofjesuschrist.org/temples/details/porto-alegre-brazil-temple"
+          >Porto Alegre Brazil Temple</a
+        >
+      </li>
+      <li>
+        <a
+          href="https://www.churchofjesuschrist.org/temples/details/curitiba-brazil-temple"
+          >Curitiba Brazil Temple</a
+        >
+      </li>
+      <li>
+        <a
+          href="https://www.churchofjesuschrist.org/temples/details/montevideo-uruguay-temple"
+          >Montevideo Uruguay Temple</a
+        >
+      </li>
+    </ul>
     <footer>
       <p>&copy;2023 | Bernardo Marques | Rio Grande do Sul, Brazil</p>
     </footer>
   </body>
+  <!-- Last modified: November 20th, 2023 -->
 </html>
