move ul to main tag and use target blank for temple list

--- a/index.html
+++ b/index.html
@@ -33,7 +33,31 @@
         videogames. My current hobbies are playing soccer once a week and
         training boxing a few times a week.
       </p>
+      <ul class="box">
+        <li>
+          <a
+            href="https://www.churchofjesuschrist.org/temples/details/porto-alegre-brazil-temple"
+            target="_blank"
+            >Porto Alegre Brazil Temple</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.churchofjesuschrist.org/temples/details/curitiba-brazil-temple"
+            target="_blank"
+            >Curitiba Brazil Temple</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.churchofjesuschrist.org/temples/details/montevideo-uruguay-temple"
+            target="_blank"
+            >Montevideo Uruguay Temple</a
+          >
+        </li>
+      </ul>
     </main>
+
     <aside class="box">
       <h2>Rio Grande do Sul</h2>
       <img src="images/rio-grande-do-sul.jpg" alt="Rio Grande do Sul" />
@@ -45,26 +69,7 @@
         the west and northwest.
       </p>
     </aside>
-    <ul class="box">
-      <li>
-        <a
-          href="https://www.churchofjesuschrist.org/temples/details/porto-alegre-brazil-temple"
-          >Porto Alegre Brazil Temple</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://www.churchofjesuschrist.org/temples/details/curitiba-brazil-temple"
-          >Curitiba Brazil Temple</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://www.churchofjesuschrist.org/temples/details/montevideo-uruguay-temple"
-          >Montevideo Uruguay Temple</a
-        >
-      </li>
-    </ul>
+
     <footer>
       <p>&copy;2023 | Bernardo Marques | Rio Grande do Sul, Brazil</p>
     </footer>
