fix links and meta

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bernardo Marques | About Us | WDD 130</title>
-    <meta name="description" content="About us" />
+    <title>White Water Rafting - About Us | WDD 130</title>
+    <meta name="description" content="About white water rafting company" />
     <meta name="author" content="Bernardo Marques" />
     <link rel="stylesheet" href="styles/rafting.css" />
   </head>
@@ -12,10 +12,10 @@
     <header>
       <img src="images/logo.jpeg" alt="Logo" />
       <nav>
-        <a href="wwr/">Home</a>
-        <a href="wwr/about.html">About Us</a>
-        <a href="wwr/trips.html">Trips</a>
-        <a href="wwr/contact.html">Contact Us</a>
+        <a href="/wwr/index.html">Home</a>
+        <a href="/wwr/about.html">About Us</a>
+        <a href="/wwr/trips.html">Trips</a>
+        <a href="/wwr/contact.html">Contact Us</a>
       </nav>
     </header>
     <main>
