wdd w4 course home

--- a/index.html
+++ b/index.html
@@ -21,54 +21,56 @@
         <a href="https://www.facebook.com/bernardohmarques/">Facebook</a>
       </nav>
     </header>
-    <main>
-      <h1>Bernardo Marques | WDD 130</h1>
-      <img src="images/profile.jpg" alt="Bernardo Marques" width="200" />
-      <p>
-        Hello! My name is Bernardo and the third of four children and served as
-        a missionary in Fortaleza East mission. I'm looking to upgrade my skills
-        and currently work as a front end developer in a company called
-        Controlle. I am from Rio Grande do Sul, Brazil and I love practicing
-        sports and learning new things, and like to spend my free time playing
-        videogames. My current hobbies are playing soccer once a week and
-        training boxing a few times a week.
-      </p>
-      <ul class="box">
-        <li>
-          <a
-            href="https://www.churchofjesuschrist.org/temples/details/porto-alegre-brazil-temple"
-            target="_blank"
-            >Porto Alegre Brazil Temple</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://www.churchofjesuschrist.org/temples/details/curitiba-brazil-temple"
-            target="_blank"
-            >Curitiba Brazil Temple</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://www.churchofjesuschrist.org/temples/details/montevideo-uruguay-temple"
-            target="_blank"
-            >Montevideo Uruguay Temple</a
-          >
-        </li>
-      </ul>
-    </main>
+    <div class="grid" v>
+      <main>
+        <h1>Bernardo Marques | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Bernardo Marques" width="200" />
+        <p>
+          Hello! My name is Bernardo and the third of four children and served
+          as a missionary in Fortaleza East mission. I'm looking to upgrade my
+          skills and currently work as a front end developer in a company called
+          Controlle. I am from Rio Grande do Sul, Brazil and I love practicing
+          sports and learning new things, and like to spend my free time playing
+          videogames. My current hobbies are playing soccer once a week and
+          training boxing a few times a week.
+        </p>
+        <ul class="box">
+          <li>
+            <a
+              href="https://www.churchofjesuschrist.org/temples/details/porto-alegre-brazil-temple"
+              target="_blank"
+              >Porto Alegre Brazil Temple</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.churchofjesuschrist.org/temples/details/curitiba-brazil-temple"
+              target="_blank"
+              >Curitiba Brazil Temple</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.churchofjesuschrist.org/temples/details/montevideo-uruguay-temple"
+              target="_blank"
+              >Montevideo Uruguay Temple</a
+            >
+          </li>
+        </ul>
+      </main>
 
-    <aside class="box">
-      <h2>Rio Grande do Sul</h2>
-      <img src="images/rio-grande-do-sul.jpg" alt="Rio Grande do Sul" />
-      <p>
-        Rio Grande do Sul is a state in the southern region of Brazil. Located
-        in the southernmost part of the country, Rio Grande do Sul is bordered
-        clockwise by Santa Catarina to the north and northeast, the Atlantic
-        Ocean to the east, Uruguay to the south and southwest, and Argentina to
-        the west and northwest.
-      </p>
-    </aside>
+      <aside class="box">
+        <h2>Rio Grande do Sul</h2>
+        <img src="images/rio-grande-do-sul.jpg" alt="Rio Grande do Sul" />
+        <p>
+          Rio Grande do Sul is a state in the southern region of Brazil. Located
+          in the southernmost part of the country, Rio Grande do Sul is bordered
+          clockwise by Santa Catarina to the north and northeast, the Atlantic
+          Ocean to the east, Uruguay to the south and southwest, and Argentina
+          to the west and northwest.
+        </p>
+      </aside>
+    </div>
 
     <footer>
       <p>&copy;2023 | Bernardo Marques | Rio Grande do Sul, Brazil</p>
