--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="https://www.facebook.com/bernardohmarques/">Facebook</a>
       </nav>
     </header>
-    <div class="grid" v>
+    <div class="grid">
       <main>
         <h1>Bernardo Marques | WDD 130</h1>
         <img src="images/profile.jpg" alt="Bernardo Marques" width="200" />
