--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,10 +12,20 @@
     <header>
       <img src="images/logo.jpeg" alt="Logo" />
       <nav>
-        <a href="/wwr/index.html">Home</a>
-        <a href="/wwr/about.html">About Us</a>
-        <a href="/wwr/trips.html">Trips</a>
-        <a href="/wwr/contact.html">Contact Us</a>
+        <ul class="navigation">
+          <li>
+            <a href="/wwr/index.html">Home</a>
+          </li>
+          <li>
+            <a href="/wwr/about.html">About Us</a>
+          </li>
+          <li>
+            <a href="/wwr/trips.html">Trips</a>
+          </li>
+          <li>
+            <a href="/wwr/contact.html">Contact Us</a>
+          </li>
+        </ul>
       </nav>
     </header>
     <main>
