--- a/wwr/about.html
+++ b/wwr/about.html
@@ -44,6 +44,7 @@
       </div>
       <section>
         <h2>History</h2>
+        <div class="history">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
           voluptate modi porro dignissimos quae ipsa laudantium labore hic
@@ -57,14 +58,46 @@
           laborum impedit consectetur cupiditate totam error mollitia maxime
           quia ea vitae!
         </p>
+        <img src="images/iguazu.jpg" alt="Parque Nacional Iguazú, Argentina" />
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+          voluptate modi porro dignissimos quae ipsa laudantium labore hic
+          doloremque. Impedit consequatur reprehenderit amet facere explicabo
+          eveniet voluptatum quibusdam dolorum architecto. Necessitatibus sint
+          et enim. Nesciunt magnam nostrum, ad ducimus mollitia, sint, veritatis
+          consequuntur repellendus fugiat sunt tenetur est blanditiis officiis
+          ipsum. Sit velit enim mollitia hic, obcaecati deserunt cumque porro
+          eum ex a ab odio fuga tenetur voluptatem sint iusto eaque omnis.
+          Voluptatem reiciendis minima voluptatibus! Eveniet, ipsa, laudantium
+          laborum impedit consectetur cupiditate totam error mollitia maxime
+          quia ea vitae!
+        </p></p>
+      </div>
+
       </section>
       <section>
         <h2>Adventure Awaits You!</h2>
-        <img src="images/zimbabwe.jpg" alt="Victoria Falls, Zimbabwe" />
-        <img src="images/costarica.jpg" alt="Outwards Bound, Costa Rica" />
-        <img src="images/iguazu.jpg" alt="Parque Nacional Iguazú, Argentina" />
-        <img src="images/sweden.jpg" alt="Gäddede, Sweden" />
-        <img src="images/zimbabwe-2.jpg" alt="Victoria Falls, Zimbabwe" />
+        <div class="adventures">
+          <figure>
+            <img src="images/zimbabwe.jpg" alt="Victoria Falls, Zimbabwe" />
+            <figcaption>Victoria Falls, Zimbabwe</figcaption>
+          </figure>
+          <figure>
+            <img src="images/costarica.jpg" alt="Outwards Bound, Costa Rica" />
+            <figcaption>Outwards Bound, Costa Rica</figcaption>
+          </figure>
+          <figure>
+            <img src="images/iguazu.jpg" alt="Parque Nacional Iguazú, Argentina" />
+            <figcaption>Parque Nacional Iguazú, Argentina</figcaption>
+          </figure>
+          <figure>
+            <img src="images/sweden.jpg" alt="Gäddede, Sweden" />
+            <figcaption>Gäddede, Sweden</figcaption>
+          </figure>
+          <figure>
+            <img src="images/zimbabwe-2.jpg" alt="Victoria Falls, Zimbabwe" />
+            <figcaption>Victoria Falls, Zimbabwe</figcaption>
+          </figure>
+        </div>
       </section>
     </main>
     <footer>
