--- a/quiz.html
+++ b/quiz.html
@@ -15,7 +15,7 @@
         <label for="q2">2. What are HTML tags?</label>
         <textarea id="q2" name="q2" rows="5"></textarea>
         <label for="q3">3. Which of these are valid list types in HTML?</label>
-        <select id="q3" type="text" name="q3">
+        <select id="q3" name="q3">
           <option value="" selected disabled>Choose one ...</option>
           <option value="ol">Ordered list &lt;ol&gt;</option>
           <option value="ul">Unordered list &lt;ul&gt;</option>
