--- a/quiz.html
+++ b/quiz.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quizz | WDD 130</title>
+    <meta name="description" content="Quiz page for WDD 130 course" />
+    <meta name="author" content="Bernardo Marques" />
     <link rel="stylesheet" href="styles/quiz.css" />
   </head>
   <body>
