--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -28,7 +28,8 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="contact-page">
+      <h1>Contact Us!</h1>
       <div class="employees">
         <figure>
           <img
