add wireframe and fix input type

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -128,7 +128,7 @@
             <label for="subscribe"
               >Please subscribe me to the monthly newsletter</label
             >
-            <input type="submit" value="Submit" />
+            <input type="button" value="Submit" />
           </div>
         </form>
 
@@ -155,6 +155,12 @@
     <footer>
       <p>&copy;2023 | White Water Rafting | Bernardo Marques</p>
       <nav class="sociallinks">
+        <a
+          href="https://app.moqups.com/L9OJCv3HdnRxTlnYSslhwiqFDplx4ABH/view/page/ad64222d5"
+          target="_blank"
+          class="wireframe-link"
+          >Wireframe</a
+        >
         <a href="https://facebook.com" target="_blank">
           <img src="images/facebook.svg" alt="Facebook" />
         </a>
