use button instead of input

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -128,7 +128,7 @@
             <label for="subscribe"
               >Please subscribe me to the monthly newsletter</label
             >
-            <input type="button" value="Submit" />
+            <button type="submit">Submit</button>
           </div>
         </form>
 
